// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Test Render and test app 1`] = `
<Text
  id="welcomeToScards"
  key=".0:$.0"
  variant="superLarge"
>
  <span
    className="css-42"
    id="welcomeToScards"
  >
    Welcome to Scards!
  </span>
</Text>
`;

exports[`App Test Render and test app 2`] = `
<Text
  id="MsgText"
  key=".0:$.$.0"
  variant="large"
>
  <span
    className="css-43"
    id="MsgText"
  >
    Welcome! This is message1
  </span>
</Text>
`;

exports[`App Test Render and test app 3`] = `
Array [
  <Text
    className="ScardQ"
    key=".0:$.$.0=020"
    variant="xLarge"
  >
    <span
      className="ScardQ css-71"
    >
      Question 1 updated
    </span>
  </Text>,
  <span
    className="ScardQ css-71"
  >
    Question 1 updated
  </span>,
  <Text
    className="ScardQ"
    key=".0:$.$.0=020"
    variant="xLarge"
  >
    <span
      className="ScardQ css-71"
    >
      Question 2
    </span>
  </Text>,
  <span
    className="ScardQ css-71"
  >
    Question 2
  </span>,
  <Text
    className="ScardQ"
    key=".0:$.$.0=020"
    variant="xLarge"
  >
    <span
      className="ScardQ css-71"
    >
      Question 3
    </span>
  </Text>,
  <span
    className="ScardQ css-71"
  >
    Question 3
  </span>,
  <Text
    className="ScardQ"
    key=".0:$.$.0=020"
    variant="xLarge"
  >
    <span
      className="ScardQ css-71"
    >
      Question 4
    </span>
  </Text>,
  <span
    className="ScardQ css-71"
  >
    Question 4
  </span>,
  <Text
    className="ScardQ"
    key=".0:$.$.0=020"
    variant="xLarge"
  >
    <span
      className="ScardQ css-71"
    >
      Question 5
    </span>
  </Text>,
  <span
    className="ScardQ css-71"
  >
    Question 5
  </span>,
]
`;

exports[`App Test Render and test app 4`] = `
<textarea
  aria-invalid={false}
  className="ms-TextField-field field-75"
  id="StudyNotesTextField"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onInput={[Function]}
  value=""
/>
`;

exports[`App Test Render and test app 5`] = `
<Text
  id="MsgText"
  key=".0:$.$.0"
  variant="large"
>
  <span
    className="css-43"
    id="MsgText"
  >
    Hello there! This is 2
  </span>
</Text>
`;

exports[`App Test Render and test app 6`] = `
<Text
  id="MsgText"
  key=".0:$.$.0"
  variant="large"
>
  <span
    className="css-43"
    id="MsgText"
  >
    Welcome! This is message1
  </span>
</Text>
`;

exports[`App Test Render and test app 7`] = `
<textarea
  aria-invalid={false}
  className="ms-TextField-field field-75"
  id="StudyNotesTextField"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onInput={[Function]}
  value="Hello Study Notes"
/>
`;

exports[`App Test Render and test app 8`] = `
<input
  aria-invalid={false}
  aria-labelledby="TextFieldLabel43"
  className="ms-TextField-field field-108"
  id="newScardQuestion"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onInput={[Function]}
  type="text"
  value="Question 1 updated"
/>
`;

exports[`App Test Render and test app 9`] = `
Array [
  <Text
    className="ScardQ"
    key=".0:$.$.0=020"
    variant="xLarge"
  >
    <span
      className="ScardQ css-71"
    >
      Question 1 updated
    </span>
  </Text>,
  <span
    className="ScardQ css-71"
  >
    Question 1 updated
  </span>,
]
`;
